--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=fo.jks
+MYAPP_RELEASE_KEY_ALIAS=fokey
+MYAPP_RELEASE_STORE_PASSWORD=lus881656
+MYAPP_RELEASE_KEY_PASSWORD=lu01131
