--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-*.log
-*.pem
+# ignore these
+*
+
+# But not these files...
+!.gitignore
+!App.js
+!app.json
+!babel.config.js
+!devnote.txt
+!package.json
+!regexNote.txt
+!yarn-error.log
+!yarn.lock
+
+!app/*
+!assets/*
