--- a/package.json
+++ b/package.json
@@ -10,34 +10,35 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "4.1.12",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/material-top-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.1",
     "babel-preset-es2015": "^6.24.1",
-    "expo": "^42.0.0",
-    "expo-av": "~9.2.3",
-    "expo-file-system": "~11.1.3",
-    "expo-secure-store": "~10.2.0",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "expo": "^44.0.6",
+    "expo-av": "~10.2.0",
+    "expo-file-system": "~13.1.4",
+    "expo-secure-store": "~11.1.0",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-modal-popover": "0.0.12",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-preset-expo": "8.3.0"
+    "@babel/core": "^7.12.9",
+    "babel-preset-expo": "9.0.2"
   },
   "private": true
 }
