--- a/package.json
+++ b/package.json
@@ -8,37 +8,37 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "4.1.12",
+    "@react-native-community/slider": "4.2.3",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/material-top-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.1",
     "babel-preset-es2015": "^6.24.1",
-    "expo": "^44.0.6",
-    "expo-av": "~10.2.0",
-    "expo-file-system": "~13.1.4",
-    "expo-secure-store": "~11.1.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "expo": "^46.0.16",
+    "expo-av": "~12.0.4",
+    "expo-file-system": "~14.1.0",
+    "expo-secure-store": "~11.3.0",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-modal-popover": "0.0.12",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-preset-expo": "9.0.2"
+    "@babel/core": "^7.18.6",
+    "babel-preset-expo": "~9.2.0"
   },
   "private": true
 }
