--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.1",
     "babel-preset-es2015": "^6.24.1",
-    "expo": "^49.0.16",
-    "expo-av": "~13.4.1",
+    "expo": "^48.0.19",
+    "expo-av": "^13.2.1",
     "expo-file-system": "^15.2.2",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.17",
+    "expo-secure-store": "^12.1.1",
+    "expo-status-bar": "^1.4.4",
+    "expo-updates": "^0.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.71.7",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-modal-popover": "0.0.12",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.4.0",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
