--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/material-top-tabs": "^5.2.17",
-    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.1",
     "babel-preset-es2015": "^6.24.1",
     "expo": "^48.0.19",
     "expo-av": "^13.2.1",
-    "expo-file-system": "^15.2.2",
+    "expo-file-system": "~15.2.2",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.71.7",
+    "react-native": "0.71.14",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-popover": "0.0.12",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.4.0",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^7.1.0",
